--- a/src/main/resources/messages_en.properties
+++ b/src/main/resources/messages_en.properties
@@ -43,4 +43,13 @@ accion.actualizar=Update
 accion.guardar=Save
 accion.regresar=Return
 
+login.username=Usuario
+login.passwored=Contrase\u00f1a
+login.login=Autenticar
 
+e403.titulo=Acceso Denegado
+e403.texto=No tiene permisos para ver esta p\u00e1gina o ejecutar esta acci\u00f3n
+
+plantilla.tusuarios=Usuarios
+plantilla.troles=Roles
+plantilla.logout=Salir
